<resources>
    <string name="app_name">MyContacts</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_school">School</string>
    <string name="menu_family">Family</string>
    <string name="menu_friend">Friend</string>
    <string name="menu_besti">Agalar</string>
    <string name="menu_work">Work</string>
    <string name="menu_main">Ana Sayfa</string>
    <string name="title_activity_create_new_card">CreateNewCard</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_activity_deneme">Deneme</string>
</resources>