<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_main" />
        <item
            android:id="@+id/nav_school"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_school" />
        <item
            android:id="@+id/nav_family"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_family" />
        <item
            android:id="@+id/nav_friend"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_friend" />
        <item
            android:id="@+id/nav_besti"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_besti" />
        <item
            android:id="@+id/nav_work"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_work" />
    </group>
</menu>